# deep_4_all

./: .gitignore  README.md  Start_notebook.ipynb  pyproject.toml
.virtual_documents/cours/TP/tp2/: intro_pytorch.ipynb
cours/CM/: 04_QCM_revision.py  05_linear_attention_self_attention.py
cours/TP/tp1_micrograd/: exo2_pytorch.py  exo3_mlp_training.py
cours/TP/tp1_micrograd/micrograd/: engine.py
cours/TP/tp2/: TP3.md  baseline_model.py  generate_cursed_data.py  leaderboard_base.py  train_dungeon_logs.py  train_oracle.py
cours/TP/tp2/.ipynb_checkpoints/: README-checkpoint.md  intro_pytorch-checkpoint.ipynb
cours/TP/tp2/checkpoints/: best_dungeon_model.pt  best_model.pt  dungeon_history.json  history.json
cours/TP/tp2/data/: train_cursed.csv
cours/TP/tp4/: enonce_tp4.md
cours/TP/tp4_projet_dasd/: config_stage1.yaml  config_stage2.yaml  dataset_info.json  enonce_tp4.md  implementation_dasd.py
cours/TP/tp4_projet_dasd/saves/Qwen3-4B/lora/stage1/: README.md  adapter_config.json  all_results.json  eval_results.json  train_results.json  trainer_log.jsonl  trainer_state.json
cours/TP/tp4_projet_dasd/saves/Qwen3-4B/lora/stage2/: README.md  adapter_config.json  all_results.json  eval_results.json  train_results.json  trainer_log.jsonl  trainer_state.json
